[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/square_shadow.png" type="Texture" id=1]
[ext_resource path="res://Player/CameraController.gd" type="Script" id=2]
[ext_resource path="res://Player/ShipController.gd" type="Script" id=3]
[ext_resource path="res://MotionTrail/MotionTrail.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Imperial.gltf" type="PackedScene" id=5]
[ext_resource path="res://Player/ThrottleContainer.gd" type="Script" id=6]
[ext_resource path="res://UI/glassPanel.png" type="Texture" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 12.7422, 5.82558, 28.313 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 6.0
margin_right = 6.0
margin_top = 6.0
margin_bottom = 6.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 3 )

[node name="YawGimbal" type="Spatial" parent="."]

[node name="PitchGimbal" type="Spatial" parent="YawGimbal"]

[node name="Ship" parent="YawGimbal/PitchGimbal" instance=ExtResource( 5 )]
transform = Transform( -3, 0, -4.52987e-07, 0, 3, 0, 4.52987e-07, 0, -3, 0, 0, 6 )

[node name="EngineTrail5" parent="YawGimbal/PitchGimbal/Ship" instance=ExtResource( 4 )]
transform = Transform( -0.333333, 0, 5.03319e-08, 0, 0.333333, 0, -5.03319e-08, 0, -0.333333, 0.000572242, -0.0504832, -5.89962 )
cast_shadow = 0
fromWidth = 2.0
lifespan = 1.2
startColor = Color( 0.870588, 0.505882, 0.0392157, 1 )

[node name="EngineTrail1" parent="YawGimbal/PitchGimbal/Ship" instance=ExtResource( 4 )]
transform = Transform( -0.333333, 0, 5.03319e-08, 0, 0.333333, 0, -5.03319e-08, 0, -0.333333, 3, 0.5, -6.5 )
cast_shadow = 0
startColor = Color( 0, 0.905882, 1, 1 )

[node name="EngineTrail2" parent="YawGimbal/PitchGimbal/Ship" instance=ExtResource( 4 )]
transform = Transform( -0.333333, 0, 5.03319e-08, 0, 0.333333, 0, -5.03319e-08, 0, -0.333333, 3, -0.5, -6.5 )
cast_shadow = 0
startColor = Color( 0, 0.905882, 1, 1 )

[node name="EngineTrail3" parent="YawGimbal/PitchGimbal/Ship" instance=ExtResource( 4 )]
transform = Transform( -0.333333, 0, 5.03319e-08, 0, 0.333333, 0, -5.03319e-08, 0, -0.333333, -3, -0.5, -6.5 )
cast_shadow = 0
startColor = Color( 0, 0.905882, 1, 1 )

[node name="EngineTrail4" parent="YawGimbal/PitchGimbal/Ship" instance=ExtResource( 4 )]
transform = Transform( -0.333333, 0, 5.03319e-08, 0, 0.333333, 0, -5.03319e-08, 0, -0.333333, -3, 0.5, -6.5 )
cast_shadow = 0
startColor = Color( 0, 0.905882, 1, 1 )

[node name="CameraBase" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="CameraPitchGimbal" type="Spatial" parent="CameraBase"]
transform = Transform( 1, 0, 0, 0, 0.97437, 0.224951, 0, -0.224951, 0.97437, 0, 0, 0 )

[node name="SpringArm" type="SpringArm" parent="CameraBase/CameraPitchGimbal"]
collision_mask = 0
spring_length = 75.0

[node name="Camera" type="Camera" parent="CameraBase/CameraPitchGimbal/SpringArm"]
transform = Transform( 1, 0, 0, 0, 0.97437, -0.224951, 0, 0.224951, 0.97437, 0, 0, 0 )
far = 10000.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58273, -2.18823 )
shape = SubResource( 1 )

[node name="ShipStatusUI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="ThrottleContainer" type="PanelContainer" parent="ShipStatusUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 47, 23 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="ShipStatusUI/ThrottleContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 94.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="Label" type="Label" parent="ShipStatusUI/ThrottleContainer/VBoxContainer"]
margin_right = 88.0
margin_bottom = 14.0
text = "THROTTLE"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ShipStatusUI/ThrottleContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 88.0
margin_bottom = 42.0
alignment = 1

[node name="QuarterImpulse" type="TextureRect" parent="ShipStatusUI/ThrottleContainer/VBoxContainer/HBoxContainer"]
margin_right = 19.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="HalfImpulse" type="TextureRect" parent="ShipStatusUI/ThrottleContainer/VBoxContainer/HBoxContainer"]
margin_left = 23.0
margin_right = 42.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="ThreeQuarterImpule" type="TextureRect" parent="ShipStatusUI/ThrottleContainer/VBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 65.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="FullImpulse" type="TextureRect" parent="ShipStatusUI/ThrottleContainer/VBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 88.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[connection signal="throttle_changed" from="." to="ShipStatusUI/ThrottleContainer" method="_on_Player_throttle_changed"]
